Archive2/a0/521f02a3c4e19f/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:19:13: error: use of deleted function 't::t(t&&)'
     t a[2]{1};
             ^
main.cpp:12:3: error: declared here
   t(t&&a)=delete;
   ^
